@@ -5,6 +5,7 @@ GeneWeb version 4.01
   - [14 Mar 01] Added Brazilian Portuguese (Paulo Francisco Sedrez).
 
 * GeneWeb server or CGI (gwd)
+  - [18 Mar 01] Fixed bug: the data base forum did not work under Windows.
   - [18 Mar 01] Fixed bug: in case of automatic merge, the source field
     of the second person or family was lost.
   - [18 Mar 01] Improved displaying of sources in personal pages: the
